<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_red"
    tools:context=".RegistroActivity">

    <View
        android:id="@+id/registerDiagonal"
        android:layout_width="190dp"
        android:layout_height="210dp"
        android:layout_marginEnd="-76dp"
        android:layout_marginBottom="-84dp"
        android:background="@drawable/bg_login_diagonal"
        android:rotation="-26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/logoFoodGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/registerPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58">

        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="124dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="Food"
                android:textColor="@color/white"
                android:textSize="72sp" />

            <ImageView
                android:layout_width="86dp"
                android:layout_height="118dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginStart="44dp"
                android:contentDescription="@string/app_name"
                android:rotation="30"
                android:src="@drawable/ic_food_fork" />

            <View
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginStart="-102dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/bg_login_green_dot" />

            <View
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginStart="114dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/bg_login_green_dot" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_login_panel"
        android:elevation="6dp"
        android:orientation="vertical"
        android:paddingStart="34dp"
        android:paddingTop="16dp"
        android:paddingEnd="34dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.82"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="false"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:includeFontPadding="false"
                    android:text="@string/auth_full_name_label"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/bg_login_input"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="14dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/auth_full_name_hint"
                    android:importantForAutofill="yes"
                    android:inputType="textPersonName"
                    android:paddingStart="18dp"
                    android:paddingEnd="18dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/login_hint"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    android:includeFontPadding="false"
                    android:text="@string/auth_email_label"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/bg_login_input"
                    android:drawableStart="@drawable/ic_login_email"
                    android:drawablePadding="14dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/auth_email_hint"
                    android:importantForAutofill="yes"
                    android:inputType="textEmailAddress"
                    android:paddingStart="18dp"
                    android:paddingEnd="18dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/login_hint"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    android:includeFontPadding="false"
                    android:text="@string/auth_password_label"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/bg_login_input">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_login_lock"
                        android:drawablePadding="14dp"
                        android:fontFamily="sans-serif"
                        android:hint="@string/auth_password_hint"
                        android:importantForAutofill="yes"
                        android:inputType="textPassword"
                        android:paddingStart="18dp"
                        android:paddingEnd="58dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/login_hint"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="18dp"
                        android:contentDescription="@string/auth_show_password"
                        android:src="@drawable/ic_login_eye_off" />
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    android:includeFontPadding="false"
                    android:text="@string/auth_confirm_password_label"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/bg_login_input">

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_login_lock"
                        android:drawablePadding="14dp"
                        android:fontFamily="sans-serif"
                        android:hint="@string/auth_confirm_password_hint"
                        android:importantForAutofill="yes"
                        android:inputType="textPassword"
                        android:paddingStart="18dp"
                        android:paddingEnd="58dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/login_hint"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="18dp"
                        android:contentDescription="@string/auth_show_password"
                        android:src="@drawable/ic_login_eye_off" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbAgreement"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:buttonTint="@color/login_red"
                        android:padding="0dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/auth_terms"
                        android:textColor="@color/login_text_secondary"
                        android:textSize="13sp" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/login_red"
                    android:fontFamily="sans-serif-bold"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/auth_signup"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:cornerRadius="24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/bg_login_google_button"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="14dp"
                        android:contentDescription="Google"
                        android:src="@drawable/ic_google_g" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/auth_continue_google"
                        android:textColor="@color/text_primary"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/auth_have_account"
                android:textColor="@color/login_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvBottomSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/auth_signin"
                android:textColor="@color/login_red"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
